# rules_gherkin

./: .bazelrc  BUILD  BUILD.bazel  Gemfile  LICENSE  MODULE.bazel  README.md  gherkin_deps.bzl
.github/workflows/: bazel.yml
examples/: .bazelrc  BUILD.bazel  Gemfile  LICENSE.txt  MODULE.bazel
examples/Calc/features/: BUILD.bazel  failure.feature
examples/Calc/features/step_definitions/: BUILD  BUILD.bazel  CalculatorSteps.cpp
examples/Calc/features/support/: wire.rb
examples/DataFile/: BUILD.bazel
examples/DataFile/features/: BUILD.bazel  datafile.feature
examples/DataFile/features/step_definitions/: BUILD.bazel  DataFileSteps.cpp
gherkin/: BUILD.bazel  cc_gherkin_wire_steps.sh.tpl  cc_gherkin_wire_test.sh.tpl  defs.bzl
