load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(
    "@rules_ruby//ruby:defs.bzl",
    "rb_binary",
)

# Build setting for cucumber output format
string_flag(
    name = "cucumber_format",
    build_setting_default = "pretty",
    values = [
        "pretty",
        "json",
        "html",
        "junit",
    ],
    visibility = ["//visibility:public"],
)

# Config settings for common formats
config_setting(
    name = "format_pretty",
    flag_values = {":cucumber_format": "pretty"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "format_json",
    flag_values = {":cucumber_format": "json"},
    visibility = ["//visibility:public"],
)

rb_binary(
    name = "cucumber_ruby",
    main = "@cucumber//bin:private/cucumber",
    visibility = ["//visibility:public"],
    deps = ["@cucumber"],
)

exports_files(
    [
        "Gemfile.lock",
        "Gemfile",
    ],
    visibility = ["//visibility:public"],
)
