module(
    name = "rules_gherkin",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "googletest", version = "1.16.0", repo_name = "gtest")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Ruby rules for cucumber CLI
bazel_dep(name = "rules_ruby", version = "0.21.1", repo_name = "bazelruby_rules_ruby")

# Ruby SDK setup
ruby = use_extension("@bazelruby_rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "3.3.0",  # Use system Ruby or specify version
)
# Note: cucumber bundle is defined in the root MODULE.bazel
# because bundle_fetch requires paths relative to main workspace
# We import it here to make it visible to this module
use_repo(ruby, "ruby", "ruby_toolchains", "cucumber")

register_toolchains("@ruby_toolchains//...")

# Boost is not needed - we use GTestDriver not BoostDriver
# bazel_dep(name = "rules_boost", version = "0.4.1")

# cucumber-cpp will be provided by local_path_override in root MODULE.bazel
bazel_dep(name = "cucumber_cpp", version = "0.6.0")
