# bazel_dep(name = "bazel_skylib", version = "1.7.1")
# bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "googletest", version = "1.16.0")
# bazel_dep(name = "rules_pkg", version = "1.0.1")

bazel_dep(name = "cucumber-cpp", version = "0.8.0")

bazel_dep(name = "rules_gherkin")
local_path_override(
    module_name = "rules_gherkin",
    path = "..",
)

# Ruby SDK setup
bazel_dep(name = "rules_ruby", version = "0.21.1")

# Ruby gem bundle for cucumber CLI (must be in root MODULE.bazel)
ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "jruby-9.4.5.0",
)
ruby.bundle_fetch(
    name = "cucumber",
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "ruby", "ruby_toolchains", "cucumber")
register_toolchains("@ruby_toolchains//:all")

bazel_dep(name = "toolchains_llvm", version = "1.6.0", dev_dependency = True)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "20.1.7",
)

use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")
