bazel_dep(name = "rules_gherkin")
local_path_override(
    module_name = "rules_gherkin",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "cucumber-cpp", version = "0.8.0.bcr.1")

# Ruby SDK setup
bazel_dep(name = "rules_ruby", version = "0.21.1")

# Ruby gem bundle for cucumber CLI (must be in root MODULE.bazel)
ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "jruby-9.4.5.0",
)
ruby.bundle_fetch(
    name = "cucumber",
    gem_checksums = {
        "base64-0.3.0": "27337aeabad6ffae05c265c450490628ef3ebd4b67be58257393227588f5a97b",
        "bigdecimal-4.0.1": "8b07d3d065a9f921c80ceaea7c9d4ae596697295b584c296fe599dd0ad01c4a7",
        "bigdecimal-4.0.1-java": "95c40a0a92dfb83b293f4b9865cd27caa7c045bedab86f3620e5dc27e6553083",
        "builder-3.3.0": "497918d2f9dca528fdca4b88d84e4ef4387256d984b8154e9d5d3fe5a9c8835f",
        "cucumber-10.2.0": "fdedbd31ecf40858b60f04853f2aa15c44f5c30bbac29c6a227fa1e7005a8158",
        "cucumber-ci-environment-9.2.0": "98121d128af99883f65b3ab78e987be9d57c17e1adeb79783e4bc269b8592128",
        "cucumber-core-15.4.0": "161309d85847b336c998b201e2003d3f4a86207fa4816da2678fe3d7f3735e45",
        "cucumber-cucumber-expressions-18.0.1": "8398a0bf636af33ff3b61e459a309295eb02745b9e21bd7af0eaaa2a1e6be3e5",
        "cucumber-gherkin-36.1.0": "c2b8e950fc3dc0b19d7fd59bb5e47950dbe61129bffcf3c038fcacaea7942b09",
        "cucumber-html-formatter-22.2.0": "e92fed01ee5a120690da89152ddbe71b77aa56b058228f9df81c6bf8cd4b6980",
        "cucumber-messages-29.0.1": "77bd8ad859ae35fd4e076cd32fce940963317e17229dd51c7844ac11766a6cb9",
        "cucumber-tag-expressions-8.1.0": "9bd8c4b6654f8e5bf2a9c99329b6f32136a75e50cd39d4cfb3927d0fa9f52e21",
        "cucumber-wire-8.0.0": "7dc80ba47c7d7b5f50a2892179f742398e2a7886cfb1a22733ad504a979a2608",
        "diff-lcs-1.6.2": "9ae0d2cba7d4df3075fe8cd8602a8604993efc0dfa934cff568969efb1909962",
        "ffi-1.17.2": "297235842e5947cc3036ebe64077584bff583cd7a4e94e9a02fdec399ef46da6",
        "ffi-1.17.2-java": "94c8516d7c97b21915497b994e41f69e7e8e21d5fc085c498b68e52044e191ec",
        "ffi-1.17.2-x86_64-linux-gnu": "05d2026fc9dbb7cfd21a5934559f16293815b7ce0314846fee2ac8efbdb823ea",
        "logger-1.7.0": "196edec7cc44b66cfb40f9755ce11b392f21f7967696af15d274dde7edff0203",
        "memoist3-1.0.0": "686e42402cf150a362050c23143dc57b0ef88f8c344943ff8b7845792b50d56f",
        "mini_mime-1.1.5": "8681b7e2e4215f2a159f9400b5816d85e9d8c6c6b491e96a12797e798f8bccef",
        "multi_test-1.1.0": "e9e550cdd863fb72becfe344aefdcd4cbd26ebf307847f4a6c039a4082324d10",
        "sys-uname-1.4.1": "ed2278ec670ee8af5eb5420d3a98e22188051f6241180db7c779993db2739a16",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "cucumber", "ruby", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")

bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")
