load("@rules_gherkin//gherkin:defs.bzl", "gherkin_library", "gherkin_test")

# One lib for multiple feature files
gherkin_library(
    name = "feature_specs",
    srcs = [
        "addition.feature",
        "division.feature",
    ],
)

gherkin_test(
    name = "calc_test",
    cucumber_ruby = "//:cucumber_ruby",
    steps = "//Calc/features/step_definitions:calculator_steps",
    deps = [":feature_specs"],
)

# Separate libs to test parallelization
gherkin_library(
    name = "addition_feature",
    srcs = ["addition.feature"],
)

gherkin_test(
    name = "addition_test",
    cucumber_ruby = "//:cucumber_ruby",
    steps = "//Calc/features/step_definitions:calculator_steps",
    deps = [":addition_feature"],
)

gherkin_library(
    name = "division_feature",
    srcs = ["division.feature"],
)

gherkin_test(
    name = "division_test",
    cucumber_ruby = "//:cucumber_ruby",
    steps = "//Calc/features/step_definitions:calculator_steps",
    deps = [":division_feature"],
)

# This test is expected to fail

gherkin_library(
    name = "failure_feature",
    srcs = ["failure.feature"],
)

gherkin_test(
    name = "failure_test",
    cucumber_ruby = "//:cucumber_ruby",
    steps = "//Calc/features/step_definitions:calculator_steps",
    deps = [":failure_feature"],
    tags = ["manual"],  # Marked as manual since it's expected to fail
)